# gemma.cpp

./: BUILD.bazel  MODULE.bazel  ViT.md
compression/: compress.h
crt/: BUILD  CMakeLists.txt  CPPLINT.cfg  kelvin.h  kelvin.ld  kelvin_gloss.cc  kelvin_intrinsics.h  kelvin_start.S  kelvin_tcm.ld  log.h  printf_traits.h
gemma/: common.cc  configs.cc  configs.h  image_tokenizer.cc  run.cc  vit_extractor.cc  weights.h
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
toolchain/wrappers/: BUILD  driver.sh
util/: app.h
