package(default_visibility = ["//visibility:public"])
load(":cc_toolchain_config.bzl", "cc_toolchain_config")
cc_toolchain_config(name = "kelvin_toolchain_config")
exports_files(glob(["*"]))
filegroup(
    name = "compiler_components",
    srcs = [
        "//toolchain/wrappers:all",
        "@toolchain_kelvin//:all",
    ],
)
cc_toolchain(
    name = "kelvin_toolchain",
    toolchain_identifier = "kelvin-toolchain",
    toolchain_config = ":kelvin_toolchain_config",
    all_files = ":compiler_components",
    ar_files = ":compiler_components",
    as_files = ":compiler_components",
    compiler_files = ":compiler_components",
    dwp_files = ":compiler_components",
    linker_files = ":compiler_components",
    objcopy_files = ":compiler_components",
    strip_files = ":compiler_components",
    supports_param_files = 0,
)

toolchain(
    name = "cc_toolchain_for_kelvin",
    toolchain = ":kelvin_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:riscv32",
        "@platforms//os:none",
    ],
)

